unreleased

* Bug fixes

  * Fix Excel support via roo-xls
  * Treat headers: true as :first_row in roo

3.3.2 / 2015-10-01

* Bug fixes

  * Correctly require ActiveSupport

3.3.1 / 2014-08-01

* Enhancements

  * Support for JSON endpoints support added to the library

3.3.0 / 2014-01-14

* Breaking changes

  * switch to safer HashDigest.digest3 for #row_hash - BREAKING CHANGE if you use row_hash as a unique id!

3.2.1 / 2014-01-07

* Bug fixes

  * Don't blow up when requiring activesupport (something about "uninitialized constant ActiveSupport::Deprecation::MethodWrapper")

3.2.0 / 2014-01-06

* Breaking changes

  * switch to faster HashDigest.digest2 for #row_hash - BREAKING CHANGE if you use row_hash as a unique id!

3.1.0 / 2014-01-06

* Breaking changes

  * Stop requiring rubyzip2 on behalf of Roo per @rossmeissl https://github.com/seamusabshere/remote_table/issues/15 ... you may have to require it yourself

* Enhancements

  * by default, treat single and double quotes as "not special" in pipe- or tab-delimited files - thanks @dwillis https://github.com/seamusabshere/remote_table/pull/14

3.0.0 / 2013-11-26

* Breaking changes

  * Include columns with blank headers as "untitled_N"
  * skip blank lines at the top of CSV files when looking for headers [rc2]
  * require rubyzip2 for Roo compatibility with Ruby 1.9 [rc2]
  * :parser object must respond to #call(row), not #parse(row) [rc1]
  * Whitespace now automatically "normalized" (/\s+/ -> ' ', stripped) for CSV [rc1]
  * Strip whitespace from headers unless you provide them as an array [beta]
  * Not passing anything options on to CSV... use :delimiter instead of :col_sep [beta]
  * Just use :encoding to specify a file's internal/initial/original encoding. No more :internal_encoding, this was jargony. [alpha]
  * No more shapefile support - hard to imagine a shapefile as a table [alpha]
  * No more :transform, legacy or not [alpha]